[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=7.0.1", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numpy-rms"
authors = [
    {name = "Iver Jordal"}
]
version = "0.4.0"
description = "A fast python library for calculating the RMS of a NumPy array"
dependencies = [
    "cffi>=1.0.0",
    "numpy>=1.21,<2"
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { "Homepage" = "https://github.com/nomonosound/numpy-rms" }

[tool.setuptools_scm]
write_to = "numpy_rms/_version.py"

[tool.cibuildwheel]
test-requires = ["cffi", "pytest", "pytest-benchmark"]
test-command = "pytest {project}/tests"

[tool.setuptools.packages.find]
exclude = ["tests", "wheelhouse"]

[tool.pytest]
testpaths = ["tests"]
